# polypolypoly

./: .env.example  .gitignore  CLEAN_ARCHITECTURE_REFACTORING.md  Cargo.toml  Dockerfile  README.md  average_cost_formula.md  config.yaml  docker-compose.yml
libs/hypersockets/: Cargo.toml  mod.rs
libs/hypersockets/benches/: benchmarks.rs
libs/hypersockets/core/: client.rs  config.rs  connection_state.rs  heartbeat.rs  mod.rs  pong_tracker.rs
libs/hypersockets/core/builder/: mod.rs  states.rs
libs/hypersockets/documentation/: API_IMPROVEMENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  HEARTBEAT.md  PASSIVE_PING.md  README.md  SMART_RECONNECTION.md
libs/hypersockets/manager/: manager.rs  mod.rs
libs/hypersockets/tests/: integration_connection.rs  integration_reconnection.rs
libs/hypersockets/tests/common/: mod.rs
libs/hypersockets/traits/: auth.rs  error.rs  headers.rs  mod.rs  parser.rs  passive_ping.rs  pong_detector.rs  reconnect.rs  router.rs  state.rs
libs/llm-filter/: Cargo.toml
libs/llm-filter/src/: cache.rs  lib.rs  ollama.rs
libs/market-db/: Cargo.toml
libs/market-db/src/: lib.rs  sync.rs
libs/polymarket/: Cargo.toml  config.rs  filter.rs  mod.rs  sniper.rs  strategy.rs
libs/polymarket-client/: Cargo.toml
libs/polymarket-client/src/: auth.rs  gamma.rs  gamma_types.rs  lib.rs  rest.rs  websocket.rs
libs/polymarket/application/: facade.rs  mod.rs  sniper.rs
libs/polymarket/application/filter/: mod.rs
libs/polymarket/application/strategies/: mod.rs  traits.rs  up_or_down.rs
libs/polymarket/application/strategies/inventory_mm/: README.md  config.rs  mod.rs  strategy.rs
libs/polymarket/application/strategies/inventory_mm/components/: data_logger.rs  mod.rs
libs/polymarket/application/strategies/inventory_mm/quoter/: context.rs  mod.rs  orderbook_ws.rs  quoter.rs
libs/polymarket/application/strategies/inventory_mm/types/: input.rs  mod.rs  order.rs  output.rs
libs/polymarket/application/strategies/market_merger/: README.md  config.rs  mod.rs  strategy.rs
libs/polymarket/application/strategies/market_merger/services/: merge_checker.rs  mod.rs  opportunity_scanner.rs  quote_calculator.rs  size_calculator.rs
libs/polymarket/application/strategies/market_merger/tracker/: market_tracker.rs  mod.rs  quote_manager.rs
libs/polymarket/application/strategies/market_merger/types/: context.rs  mod.rs  quote.rs  state.rs
libs/polymarket/application/strategies/sports_sniping/: mod.rs  strategy.rs
libs/polymarket/application/strategies/sports_sniping/services/: logging.rs  mod.rs
libs/polymarket/application/strategies/up_or_down/: REFACTOR_SUMMARY.md  mod.rs  strategy.rs
libs/polymarket/application/strategy/: executor.rs  mod.rs  monitor.rs  risk.rs
libs/polymarket/application/sync/: events.rs  markets.rs  mod.rs
libs/polymarket/application/visualizer/: app.rs  mod.rs  state.rs
libs/polymarket/application/visualizer/ui/: mod.rs  orderbook.rs  sidebar.rs
libs/polymarket/benches/: order_diff_bench.rs  solver_bench.rs
libs/polymarket/client/: auth.rs  mod.rs
libs/polymarket/client/clob/: mod.rs  orderbook.rs  sniper_ws.rs  sniper_ws_types.rs  types.rs  websocket.rs
libs/polymarket/client/gamma/: client.rs
libs/polymarket/config/: mod.rs
libs/polymarket/database/: mod.rs  models.rs  schema.rs  sync.rs
libs/polymarket/domain/: filter.rs  mod.rs  models.rs  orderbook.rs  sniper_market.rs  strategy.rs
libs/polymarket/filter/: cache.rs  mod.rs
libs/polymarket/infrastructure/: active_order_manager.rs  balance_manager.rs  cache.rs  heartbeat.rs  logging.rs  mod.rs  ollama.rs  order_manager.rs  position_manager.rs  risk_manager.rs
libs/polymarket/infrastructure/client/: auth.rs  ctf.rs  mod.rs  redeem.rs
libs/polymarket/infrastructure/client/binance/: mod.rs  price_manager.rs  types.rs  websocket.rs
libs/polymarket/infrastructure/client/clob/: constants.rs  helpers.rs  mod.rs  orderbook.rs  rest.rs  sniper_ws.rs  sniper_ws_types.rs  trading.rs  types.rs
libs/polymarket/infrastructure/client/data/: client.rs  mod.rs  types.rs
libs/polymarket/infrastructure/client/gamma/: client.rs  mod.rs  types.rs
libs/polymarket/infrastructure/client/oracle/: candlestick_api.rs  chainlink_types.rs  chainlink_ws.rs  mod.rs  oracle_ws.rs  price_manager.rs  types.rs
libs/polymarket/infrastructure/client/sports/: mod.rs  sports_ws.rs  types.rs
libs/polymarket/infrastructure/client/user/: README.md  mod.rs  order_manager.rs  position_tracker.rs  reconciliation.rs  types.rs  user_ws.rs
libs/polymarket/infrastructure/config/: mod.rs  strategies.rs
libs/polymarket/infrastructure/database/: mod.rs  models.rs  schema.rs
libs/polymarket/sniper/: market.rs  mod.rs
libs/polymarket/strategy/: executor.rs  mod.rs
libs/polymarket/tests/: integration_clob.rs  solver_properties.rs
libs/polymarket/tests/common/: mod.rs
libs/polymarket/utils/: logging.rs  mod.rs  shutdown.rs
model_tuning/: .gitignore  .pre-commit-config.yaml  README.md  best_params.yaml  pyproject.toml  run_real_simulation.py  test_e2e_simulation_pipeline.py  test_fill_driven_sim.py
model_tuning/configs/: default.yaml  grid_search.yaml  safe_testing.yaml
model_tuning/docs/: simulation.md
model_tuning/sim_data/btc-updown-15m-1768542300/: fills.json  oracle.json
model_tuning/src/model_tuning/: __init__.py  oracle_orderbook_analysis.ipynb
model_tuning/src/model_tuning/cli/: __init__.py  main.py
model_tuning/src/model_tuning/core/: __init__.py  models.py  quoter.py  utils.py
model_tuning/src/model_tuning/data/: __init__.py  loaders.py
model_tuning/src/model_tuning/live_data_fetching/: __init__.py  fetcher.py
model_tuning/src/model_tuning/simulation/: __init__.py  fill_driven_simulator.py  loaders.py  models.py  orderbook_reconstructor.py  quoters.py  simulator.py  visualize.py
model_tuning/src/model_tuning/tuning/: __init__.py  backtester.py  grid_search.py  metrics.py  optimizer.py
model_tuning/tests/: __init__.py  conftest.py  test_backtester.py  test_models.py  test_quoter.py  test_quoter_functions.py  test_real_data_simulator.py
src/: lib.rs
(+62 files in other folders)
