[workspace]
members = [
    "libs/hypersockets",
    "libs/polymarket",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["polymarket-arb-bot"]
license = "MIT"
repository = "https://github.com/yourusername/polymarket-arb-bot"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Ethereum/Crypto
ethers = { version = "2", features = ["abigen", "ws"] }

# Environment variables
dotenv = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
futures = "0.3"

# Workspace libraries
hypersockets = { path = "libs/hypersockets" }
polymarket = { path = "libs/polymarket" }

[package]
name = "polymarket-arb-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polymarket_arb"
path = "bin/polymarket_arb.rs"

[[bin]]
name = "polymarket_events"
path = "bin/polymarket_events.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
polymarket = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
