[package]
name = "hypersockets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "mod.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
