[package]
name = "market-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
polymarket-client = { workspace = true }
