[package]
name = "polymarket-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
hypersockets = { workspace = true }
ethers = { workspace = true }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
