[package]
name = "polymarket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "mod.rs"

[[bin]]
name = "redeem-test"
path = "bin/redeem_test.rs"

[[bin]]
name = "test-oracle"
path = "bin/test_oracle.rs"

[dependencies]
# Workspace dependencies
hypersockets = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true }

# Additional dependencies
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chainlink-data-streams-report = "1.0.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
base64 = "0.22"
dashmap = "6"
crossbeam-channel = "0.5"
ureq = { version = "2.9", features = ["json"] }
parking_lot = "0.12"
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tempfile = "3"
